force-app/main/default/objects/VehicleModel__c/VehicleModel__c.object-meta.xml
<CustomObject>
    <description>Vehicle type(Model) Management</description>
    <label>Vehicle Model</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Models</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>