force-app/main/default/objects/VehicleModel__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: Gd-1320
Purpose :- After Sales record of Customer.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>