force-app/main/default/objects/VehicleModel__c/fields/Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: Gd-1320
Purpose :- After Sales record of Customer.</description>
    <label>Engine Capacity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>