force-app/main/default/objects/VehicleModel__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: Gd-1320
Purpose :- After Sales record of Customer.</description>
    <label>Model Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>