force-app/main/default/objects/VehicleModel__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: Gd-1320
Purpose :- After Sales record of Customer.</description>
    <label>Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>