force-app/main/default/objects/VehicleModel__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <description>Created By: Manoj Kumar
Created Date: 02/11/2030
User Story: Gd-1320
Purpose :- After Sales record of Customer.</description>
    <label>Transmission</label>
    <length>40</length>
    <type>Text</type>
</CustomField>