force-app/main/default/objects/VehicleModel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Model_Year__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Country_Version__c</columns>
    <columns>Engine_Capacity__c</columns>
    <columns>Engine_Type__c</columns>
    <columns>Fuel_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Transmission__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>